concord-server, docker: tidy up, enable gc logs (#303)